--- a/configure.ac
+++ b/configure.ac
@@ -747,7 +747,7 @@ dnl is the one intended to be used.
 else
   dnl preload c-client default locations/options
   case $host in
-    *-linux-gnu*|*-k*bsd*-gnu*|*-gnu*)
+    *-linux*|*-k*bsd*-gnu*|*-gnu*)
       if test -f /etc/fedora-release -o -f /etc/redhat-release -o -f /etc/redhat_version ; then  
         alpine_SSLTYPE="nopwd"
 	if test -d /etc/pki/tls ; then  
@@ -1192,7 +1192,7 @@ dnl Tests and assignments below are mostly to coax the appropriate
 dnl build from c-client.  Most of this will go away when c-client
 dnl adopts configure
 case "$host" in
-  *-linux-gnu*|*-k*bsd*-gnu*|*-gnu*)
+  *-linux*|*-k*bsd*-gnu*|*-gnu*)
     alpine_path_delim="/"
     alpine_mode_readonly="(0600)"
     if test -f /etc/fedora-release ; then  
@@ -1224,7 +1224,7 @@ case "$host" in
         alpine_c_client_target="ldb"
 	alpine_PAM="yes"
       fi
-    elif test -f /etc/SuSE-release ; then
+    elif test -f /etc/SuSE-release; then
       systype="LSU"
       alpine_c_client_target="lsu"
       alpine_PAM="yes"
