* Remove CC=cc from Makefiles under the imap/ directory. Also redefine     ARRC, as these are inherited from values set in the configure script,     which in turn can be inherited from environment variables. This     implies that to build c-client one needs to specify these variables,     and since this is not being built as a stand-alone library anymore, we     take these values from the configure script. Submitted by Robert     Siebeck.

--- a/imap/src/osdep/unix/Makefile
+++ b/imap/src/osdep/unix/Makefile
@@ -132,10 +132,9 @@ EMPTYPROTO=unixproto
 
 # Commands possibly overridden by the individual port
 
-ARRC=ar rc
-CC=cc
+ARRC=$(AR) rc
 LN=ln -s
-RANLIB=ranlib
+RANLIB?=ranlib
 
 
 # Standard distribution build parameters
