* Promote the login authentication method higher than     OAUTHBEARER and XOAUTH2. This avoids using these authentication     methods when other authentication methods are still working.

--- a/imap/src/osdep/unix/Makefile
+++ b/imap/src/osdep/unix/Makefile
@@ -139,7 +139,7 @@ RANLIB?=ranlib
 
 # Standard distribution build parameters
 
-DEFAULTAUTHENTICATORS=ext md5 pla bea oa2 log
+DEFAULTAUTHENTICATORS=ext md5 pla log bea oa2
 #
 # mh needs to be after any other directory format drivers (such as mx or mix)
 # since otherwise mh will seize any directory that is under the mh path.
