* Expansion of the configuration screen for XOAUTH2 to include      username, and tenant.
   * If a user has more than one client-id for a service, Alpine tries to
     asks the user which client-id to use and associates that client-id to
     the credentials in the XOAUTH2 configuration screen.

--- a/imap/src/osdep/nt/makefile.nt
+++ b/imap/src/osdep/nt/makefile.nt
@@ -29,7 +29,7 @@
 EXTRAAUTHENTICATORS =
 EXTRADRIVERS = 
 EXTRACFLAGS =
-AUTHENTICATORS = ext md5 pla bea oa2 log
+AUTHENTICATORS = ext md5 pla log bea oa2
 DRIVERS = imap nntp pop3 mbx mtx tenex unix
 CREATEDRIVER = mbx
 APPENDDRIVER = unix
