--- a/alpine/Makefile.in
+++ b/alpine/Makefile.in
@@ -904,6 +904,7 @@ uninstall-am: uninstall-binPROGRAMS
 date.c:
 	echo "char datestamp[]="\"$(ALPINE_DATESTAMP)\"";" > date.c
 	echo "char hoststamp[]="\"$(ALPINE_HOSTSTAMP)\"";" >> date.c
+	echo "char configoptions[]="\"`../config.status --config`\"";" >> date.c
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
