* Fixes to warnings given by gcc 10.

--- a/regex/Makefile
+++ b/regex/Makefile
@@ -43,8 +43,8 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
-build_triplet = x86_64-unknown-linux-gnu
-host_triplet = x86_64-unknown-linux-gnu
+build_triplet = x86_64-pc-linux-gnu
+host_triplet = x86_64-pc-linux-gnu
 subdir = regex
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -92,27 +92,27 @@ DIST_SOURCES = $(libregex_a_SOURCES)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /run/media/echappa/Work/alpine/alpinegit/missing aclocal-1.15
+ACLOCAL = ${SHELL} /run/media/echappa/Alpine/alpine/alpinegit/missing aclocal-1.15
 AMTAR = $${TAR-tar}
 AM_CFLAGS =  -g
 AM_LDFLAGS = 
 AR = /usr/bin/ar
-AUTOCONF = ${SHELL} /run/media/echappa/Work/alpine/alpinegit/missing autoconf
-AUTOHEADER = ${SHELL} /run/media/echappa/Work/alpine/alpinegit/missing autoheader
-AUTOMAKE = ${SHELL} /run/media/echappa/Work/alpine/alpinegit/missing automake-1.15
+AUTOCONF = ${SHELL} /run/media/echappa/Alpine/alpine/alpinegit/missing autoconf
+AUTOHEADER = ${SHELL} /run/media/echappa/Alpine/alpine/alpinegit/missing autoheader
+AUTOMAKE = ${SHELL} /run/media/echappa/Alpine/alpine/alpinegit/missing automake-1.15
 AWK = gawk
-CC = gcc
+CC = gcc-10
 CCDEPMODE = depmode=gcc3
-CFLAGS = -g
+CFLAGS = -g -O2 -DOPENSSL_1_1_0 -DOPENSSL_API_COMPAT=0x10100000L
 CP = /usr/bin/cp
-CPP = gcc -E
+CPP = gcc-10 -E
 CPPFLAGS = -I/usr/include  -I/regex
 CYGPATH_W = echo
-C_CLIENT_CFLAGS = EXTRACFLAGS=" -DTLSV1_2 -I/usr/include  -I/regex -g"
-C_CLIENT_GCCOPTLEVEL = GCCOPTLEVEL="-O0"
-C_CLIENT_LDFLAGS = EXTRALDFLAGS=" -L/usr/lib  -L/regex -lgssapi_krb5 -lpam -lldap -lssl -lcrypto -ldl  -ltinfo -llber -lpam -lkrb5"
+C_CLIENT_CFLAGS = EXTRACFLAGS=" -I/usr/include  -I/regex -g -O2 -DOPENSSL_1_1_0 -DOPENSSL_API_COMPAT=0x10100000L"
+C_CLIENT_GCCOPTLEVEL = 
+C_CLIENT_LDFLAGS = EXTRALDFLAGS=" -L/usr/lib  -L/regex -lgssapi_krb5 -lcrypt -lssl -lcrypto -ldl  -ltinfo -lkrb5"
 C_CLIENT_SPECIALS = SSLDIR=/usr SSLCERTS=/etc/ssl/certs 
-C_CLIENT_TARGET = lnp
+C_CLIENT_TARGET = slx
 C_CLIENT_WITH_IPV6 = touch imap/ip6
 DEFS = -DHAVE_CONFIG_H
 DEPDIR = .deps
@@ -134,14 +134,14 @@ INSTALL_SCRIPT = ${INSTALL}
 INSTALL_STRIP_PROGRAM = $(install_sh) -c -s
 INTLLIBS = 
 INTL_MACOSX_LIBS = 
-ISPELLPROG = 
+ISPELLPROG = hunspell
 Includedir = @Includedir@
 LD = /usr/x86_64-suse-linux/bin/ld -m elf_x86_64
 LDFLAGS = -L/usr/lib  -L/regex
 LIBICONV = -liconv
 LIBINTL = 
 LIBOBJS = 
-LIBS = -lgssapi_krb5 -lpam -lldap -lssl -lcrypto -ldl  -ltinfo -llber -lpam -lkrb5
+LIBS = -lgssapi_krb5 -lcrypt -lssl -lcrypto -ldl  -ltinfo -lkrb5
 LIBTOOL = $(SHELL) $(top_builddir)/libtool
 LIBTOOL_DEPS = ./ltmain.sh
 LIPO = 
@@ -152,11 +152,11 @@ LTLIBINTL =
 LTLIBOBJS = 
 MAINT = #
 MAKE = /usr/bin/make
-MAKEINFO = ${SHELL} /run/media/echappa/Work/alpine/alpinegit/missing makeinfo
+MAKEINFO = ${SHELL} /run/media/echappa/Alpine/alpine/alpinegit/missing makeinfo
 MKDIR_P = /usr/bin/mkdir -p
 MSGFMT = /usr/bin/msgfmt
 MSGFMT_015 = /usr/bin/msgfmt
-MSGMERGE = /usr/bin/msgmerge
+MSGMERGE = :
 NM = /usr/bin/nm -B
 NMEDIT = 
 NPA_PROG = 
@@ -167,13 +167,13 @@ OTOOL64 =
 PACKAGE = alpine
 PACKAGE_BUGREPORT = chappa@washington.edu
 PACKAGE_NAME = alpine
-PACKAGE_STRING = alpine 2.21
+PACKAGE_STRING = alpine 2.24
 PACKAGE_TARNAME = alpine
 PACKAGE_URL = 
-PACKAGE_VERSION = 2.21
+PACKAGE_VERSION = 2.24
 PATH_SEPARATOR = :
 POSUB = po
-PTHREAD_CC = gcc
+PTHREAD_CC = gcc-10
 PTHREAD_CFLAGS = 
 PTHREAD_LIBS = 
 PWPROG = /usr/bin/passwd
@@ -184,53 +184,53 @@ SED = /usr/bin/sed
 SENDMAIL = /usr/sbin/sendmail
 SET_MAKE = 
 SHELL = /bin/sh
-SPELLPROG = spell
+SPELLPROG = hunspell
 STRIP = strip
 USE_NLS = yes
-VERSION = 2.21
+VERSION = 2.24
 WEB_BINDIR = 
 WEB_BUILD = 
 WEB_PUBCOOKIE_BUILD = 
 WEB_PUBCOOKIE_LIB = 
 WEB_PUBCOOKIE_LINK = 
-XGETTEXT = /usr/bin/xgettext
-XGETTEXT_015 = /usr/bin/xgettext
-abs_builddir = /run/media/echappa/Work/alpine/alpinegit/regex
-abs_srcdir = /run/media/echappa/Work/alpine/alpinegit/regex
-abs_top_builddir = /run/media/echappa/Work/alpine/alpinegit
-abs_top_srcdir = /run/media/echappa/Work/alpine/alpinegit
-ac_ct_CC = gcc
+XGETTEXT = :
+XGETTEXT_015 = :
+abs_builddir = /run/media/echappa/Alpine/alpine/alpinegit/regex
+abs_srcdir = /run/media/echappa/Alpine/alpine/alpinegit/regex
+abs_top_builddir = /run/media/echappa/Alpine/alpine/alpinegit
+abs_top_srcdir = /run/media/echappa/Alpine/alpine/alpinegit
+ac_ct_CC = gcc-10
 ac_ct_DUMPBIN = 
 acx_pthread_config = no
-alpine_interactive_spellcheck = 
-alpine_simple_spellcheck = 
+alpine_interactive_spellcheck = /usr/bin/hunspell
+alpine_simple_spellcheck = /usr/bin/hunspell -l
 am__include = include
 am__leading_dot = .
 am__quote = 
 am__tar = $${TAR-tar} chof - "$$tardir"
 am__untar = $${TAR-tar} xf -
 bindir = ${exec_prefix}/bin
-build = x86_64-unknown-linux-gnu
+build = x86_64-pc-linux-gnu
 build_alias = 
 build_cpu = x86_64
 build_os = linux-gnu
-build_vendor = unknown
+build_vendor = pc
 builddir = .
 datadir = ${datarootdir}
 datarootdir = ${prefix}/share
 docdir = ${datarootdir}/doc/${PACKAGE_TARNAME}
 dvidir = ${docdir}
 exec_prefix = ${prefix}
-host = x86_64-unknown-linux-gnu
+host = x86_64-pc-linux-gnu
 host_alias = 
 host_cpu = x86_64
 host_os = linux-gnu
-host_vendor = unknown
+host_vendor = pc
 htmldir = ${docdir}
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /run/media/echappa/Work/alpine/alpinegit/install-sh
-libdir = ${exec_prefix}/lib
-libexecdir = ${exec_prefix}/libexec
+install_sh = ${SHELL} /run/media/echappa/Alpine/alpine/alpinegit/install-sh
+libdir = ${exec_prefix}/lib64
+libexecdir = ${exec_prefix}/lib
 localedir = ${datadir}/locale
 localstatedir = ${prefix}/var
 lt_ECHO = @lt_ECHO@
