NOTICE NOTICE NOTICE NOTICE NOTICE NOTICE NOTICE NOTICE NOTICE NOTICE NOTICE NOTICE NOTICE NOTICE NOTICE NOTICE NOTICE NOTICE NOTICE NOTICE NOTICE NOTICE
   First use the commit command before using "git commit -a"

NOTICE NOTICE NOTICE NOTICE NOTICE NOTICE NOTICE NOTICE NOTICE NOTICE

  * Add new type SUINT32, as a shorter version of UINT32 for systems that
    do not have a proper uint32_t type. SUINT32 is defined by default to
    be UINT32, but during compilation the user can define an environment
    variable SUINT32 to be, say, unsigned long, and that will make SUINT32
    to take that type. This, and the source codem, are the only places
    where this is documented. Work in collaboration with professor Martin
    Trusler.

--- a/configure.ac
+++ b/configure.ac
@@ -1935,6 +1935,12 @@ AC_CHECK_HEADERS([stdint.h], [uint32=uint32_t], [
 ])
 AC_DEFINE_UNQUOTED([UINT32], $uint32, [System defined unsigned 32 bit integer])
 
+if test -z "$SUINT32" ; then
+   SUINT32="$uint32"
+fi
+
+AC_DEFINE_UNQUOTED([SUINT32], $SUINT32, [System defined for shorter than unsigned 32 bit integer])
+
 AC_CACHE_CHECK(argument pointer type of qsort compare function and base,
 ac_cv_func_qsort_argtype,
 [AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[
