--- a/imap/src/osdep/nt/makefile.nt
+++ b/imap/src/osdep/nt/makefile.nt
@@ -94,7 +94,7 @@ os_nt.obj: mail.h osdep.h env_nt.h fs.h ftl.h nl.h tcp.h tcp_nt.h yunchan.h \
 	os_nt.c fs_nt.c ftl_nt.c nl_nt.c env_nt.c ssl_nt.c ssl_none.c \
 	ip_nt.c tcp_nt.c yunchan.c pmatch.c write.c \
 	mailfile.h auth_md5.c auth_ntl.c auth_pla.c auth_bea.c auth_oa2.c \
-	auth_log.c
+	auth_log.c sha.c
 
 mbxnt.obj: mail.h misc.h osdep.h mbxnt.c
 
@@ -112,18 +112,20 @@ http.obj: mail.h misc.h http.h
 
 json.obj: mail.h misc.h json.h
 
+sha.obj: mail.h misc.h osdep.h sha.h sha-private.h hash.h hmac.c sha1.c sha224-256.c sha384-512.c usha.c
+
 $(CCLIENTLIB): mail.obj misc.obj fdstring.obj flstring.obj netmsg.obj \
 	newsrc.obj rfc822.obj smanager.obj utf8.obj utf8aux.obj \
 	imap4r1.obj nntp.obj pop3.obj smtp.obj os_nt.obj http.obj json.obj \
 	mbxnt.obj mtxnt.obj tenexnt.obj unixnt.obj dummynt.obj pseudo.obj \
-	http.obj json.obj
+	http.obj json.obj sha.obj
 	if exist $(CCLIENTLIB) del $(CCLIENTLIB)
 	LIB /NOLOGO /OUT:cclient.lib \
 	mail.obj misc.obj fdstring.obj flstring.obj netmsg.obj \
 	newsrc.obj rfc822.obj smanager.obj utf8.obj utf8aux.obj \
 	imap4r1.obj nntp.obj pop3.obj smtp.obj os_nt.obj \
 	mbxnt.obj mtxnt.obj tenexnt.obj unixnt.obj dummynt.obj pseudo.obj \
-	http.obj json.obj
+	http.obj json.obj sha.obj
 
 clean:
 	del *.lib *.obj linkage.* osdep.* ip_nt.c auths.c *.exe *.exp || rem
