* Fix regression introduced by f95e2d179774739a885468144e68de047245ada5:
     When testing for Kerberos support consistently use OLDLIBS as the
     variable to temporarily save LIBS to, i.e., fix the mis-spelling of
     that variable as OLDLIB which lead to the contents of LIB being wiped
     out when Kerberos is not fully installed. Submitted by Gerald Pfeifer.

--- a/configure.ac
+++ b/configure.ac
@@ -1684,7 +1684,7 @@ AC_SUBST([C_CLIENT_BUNDLED], $alpine_c_client_bundled)
 
 dnl provide KRB5 support?
 if test "x$alpine_GSSTYPE" != "xnone" ; then
-  OLDLIB="$LIBS"
+  OLDLIBS="$LIBS"
   AC_SEARCH_LIBS(gss_init_sec_context,gss gssapi gssapi_krb5,
     [
       dnl MIT-based?
